<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:translationZ="100dp"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:text="@string/task"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:text="@string/due_date"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="start"/>
        <TextView
            android:text="@string/done"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>

    <include layout="@layout/content_main" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#876488"
        app:srcCompat="@android:drawable/ic_input_add"
        android:tint="@android:color/white"
        android:contentDescription="@string/add_todo_button" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>